--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,16 @@
 .container{
     border: 2px solid black;
     padding: 10px;
+    text-align: center;
 }
 
-.flex-container{
+.flex-container,.flex-box-container{
 display: flex;
 border: 1px solid black;
 padding: 10px;
 justify-content: space-around;
 }
-
+ 
 .flex-container div{
     padding: 5px;
 }
